--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,68 @@
 
     <groupId>com.maksim.pozdeev</groupId>
     <artifactId>sunrise</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <modules>
+        <module>unit-testing</module>
+    </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
+    <!-- build Settings -->
+    <build>
+        <resources>
+        </resources>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <!-- More Project Information -->
+    <organization>
+        <name>Good Organization</name>
+    </organization>
+
+    <developers>
+        <developer>
+            <name>Maksim</name>
+            <organization>Good Organization</organization>
+            <roles>
+                <role>Student</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <contributors>
+        <contributor>
+            <name>Ilia</name>
+            <organization>Good Organization</organization>
+            <roles>
+                <role>Mentor</role>
+            </roles>
+        </contributor>
+    </contributors>
 
 
 </project>
