--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.maksim.pozdeev</groupId>
     <artifactId>sunrise</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>junitmocking</module>
+    </modules>
 
 
 </project>
